--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <header id="header" class="row">
 
    		<div class="header-logo">
-	        <a href="index.html">Dazzle</a>
+	        <a href="index.html"><img src="image/escaperoom-logo.png"></a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
@@ -76,8 +76,8 @@
                     <h3 data-aos="fade-up">Welcome to Escape Room Finance Tokens </h3>
 
                     <h1 data-aos="fade-up">
-                        Farming without do NOTHING!<br>
-                        DOUBLE your tokens automatically!<br>
+                        𝐄𝐒𝐂𝐀𝐏𝐄 𝐟𝐫𝐨𝐦 𝐩𝐚𝐧𝐝𝐞𝐦𝐢𝐜 𝐭𝐫𝐨𝐮𝐛𝐥𝐞 𝐰𝐢𝐭𝐡<br>
+                        #𝐄𝐒𝐂𝐀𝐏𝐄𝐑𝐎𝐎𝐌 𝐩𝐚𝐬𝐬𝐢𝐯𝐞 𝐢𝐧𝐜𝐨𝐦𝐞.<br>
 
                     </h1>
 
