--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <header id="header" class="row">
 
    		<div class="header-logo">
-	        <a href="index.html"><img src="image/escaperoom-logo.png"></a>
+	        <a href="index.html"></a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
@@ -140,7 +140,7 @@
             </div>
             <div class="col-eight">
                 <p class="lead" data-aos="fade-up">
-                    EscapeRoom Finance Token is a super deflationary black hole that hyper deflates the supply. Find more about EscapeRoom Tokens below!
+                    ESCAPEROOM Finance Token is a super deflationary black hole that hyper deflates the supply. Find more about EscapeRoom Tokens below!
                 </p>
             </div>
 
@@ -156,9 +156,9 @@
 
                     <div class="service-content">
 
-                        <h3>Fully Resposive</h3>
+                        <h3>Deflationary</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>Every transaction happens, 2.5% of ESCAPEROOM will be burnt. Which mean, our token supply will decreased year to year.
                         </p>
 
                     </div>
@@ -170,9 +170,9 @@
                         <span class="icon"><i class="icon-image"></i></span>
 
                     <div class="service-content">
-                        <h3>Retina Ready</h3>
+                        <h3>Passive Income</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>Every transcation, 2.5% of transaction fee applied and distributed to holders automatically, its mean you are have passive income for being holders for ESCAPEROOM
                         </p>
 
 
@@ -185,9 +185,9 @@
                     <span class="icon"><i class="icon-paint-brush"></i></span>
 
                     <div class="service-content">
-                        <h3>Stylish Design</h3>
+                        <h3>Safe Liquidity</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>Every transactions happens, there will be 5% redistributed to Liquidity Pool automatically. More transaction, more liquidity will be added.
                         </p>
 
                     </div>
@@ -199,9 +199,9 @@
                         <span class="icon"><i class="icon-file"></i></span>
 
                     <div class="service-content">
-                        <h3>Clean Code</h3>
+                        <h3>Tokens Supply</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>ESCAPEROOM Max Supply 100 Quadrillion
                         </p>
 
                     </div>
@@ -213,9 +213,9 @@
                     <span class="icon"><i class="icon-sliders"></i></span>
 
                     <div class="service-content">
-                        <h3>Easy To Customize</h3>
+                        <h3>Community Tokens</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>ESCAPEROOM is a community tokens, NO DEV Tokens, NO DEV MARKETING ALLOCATION.
                         </p>
                     </div>
 
@@ -226,9 +226,9 @@
                     <span class="icon"><i class="icon-gift"></i></span>
 
                     <div class="service-content">
-                        <h3>Free of Charge</h3>
+                        <h3>Grow Together</h3>
 
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                        <p>You can support us and makes ESCAPEROOM grow together.
                         </p>
 
                     </div>
@@ -275,7 +275,7 @@
 
         </div> <!-- end about-how -->
 
-        <div class="row about-bottom-image">
+      <!--  <div class="row about-bottom-image">
 
            <img src="images/app-screens-1200.png"
                 srcset="images/app-screens-600.png 600w,
@@ -284,13 +284,13 @@
                 sizes="(max-width: 2800px) 100vw, 2800px"
                 alt="App Screenshots" data-aos="fade-up">
 
-        </div>  <!-- end about-bottom-image -->
+        </div>-->  <!-- end about-bottom-image -->
 
     </section> <!-- end about -->
 
 
     <!-- pricing
-    ================================================== -->
+    ==================================================
     <section id="pricing">
         <div class="row pricing-content">
 
@@ -325,7 +325,7 @@
                             </div>
 
                         </div>
-                    </div> <!-- end plan-wrap -->
+                    </div>  end plan-wrap
 
                     <div class="col-six plan-wrap">
                         <div class="plan-block primary" data-aos="fade-up">
@@ -348,13 +348,13 @@
                             </div>
 
                         </div>
-                    </div> <!-- end plan-wrap -->
+                    </div> end plan-wrap
 
                 </div>
-            </div> <!-- end pricing-table -->
+            </div>  end pricing-table
 
-        </div> <!-- end pricing-content -->
-    </section> <!-- end pricing -->
+        </div> end pricing-content
+    </section> end pricing -->
 
 
     <!-- Testimonials Section
@@ -420,10 +420,10 @@
 
         <div class="row">
             <div class="col-full">
-                <h1 class="intro-header"  data-aos="fade-up">Download Our App Today!</h1>
+                <h1 class="intro-header"  data-aos="fade-up">WARNING!</h1>
 
                 <p class="lead" data-aos="fade-up">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                    The information provided on this website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website's content as such. <strong>ESCAPEROOM team</strong> does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions.
                 </p>
 
                 <ul class="download-badges">
