--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <!--  <a href="#" title="sign-up" class="button button-primary cta">Sign Up</a>-->
 		</nav>
 
-		<!--<a class="header-menu-toggle" href="#"><span>Menu</span></a>    	-->
+		<a class="header-menu-toggle" href="#"><span>Menu</span></a>    	
 
    </header> <!-- /header -->
 
