--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="fas fa-fire-alt"></i></span>
+                    <span class="icon"><i class="fa fa-fire-alt"></i></span>
 
                     <div class="service-content">
 
@@ -167,7 +167,7 @@
 
                     <div class="bgrid feature" data-aos="fade-up">
 
-                        <span class="icon"><i class="fas fa-piggy-bank"></i></span>
+                        <span class="icon"><i class="fa fa-piggy-bank"></i></span>
 
                     <div class="service-content">
                         <h3>Passive Income</h3>
@@ -182,7 +182,7 @@
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="fas fa-boxes"></i></span>
+                    <span class="icon"><i class="fa fa-boxes"></i></span>
 
                     <div class="service-content">
                         <h3>Safe Liquidity</h3>
@@ -196,7 +196,7 @@
 
                     <div class="bgrid feature" data-aos="fade-up">
 
-                        <span class="icon"><i class="fas fa-truck-loading"></i></span>
+                        <span class="icon"><i class="fa fa-truck-loading"></i></span>
 
                     <div class="service-content">
                         <h3>Tokens Supply</h3>
@@ -210,7 +210,7 @@
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="fas fa-users"></i></span>
+                    <span class="icon"><i class="fa fa-users"></i></span>
 
                     <div class="service-content">
                         <h3>Community Tokens</h3>
@@ -223,7 +223,7 @@
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="fas fa-rocket"></i></span>
+                    <span class="icon"><i class="fa fa-rocket"></i></span>
 
                     <div class="service-content">
                         <h3>Grow Together</h3>
