--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <!-- mobile specific metas
    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/5.15.3/css/font-awesome.css" rel="stylesheet">
+
 
     <!-- CSS
    ================================================== -->
@@ -167,7 +171,7 @@
 
                     <div class="bgrid feature" data-aos="fade-up">
 
-                        <span class="icon"><i class="fa fa-piggy-bank"></i></span>
+                        <span class="icon"><i class="fa fa-money-bill"></i></span>
 
                     <div class="service-content">
                         <h3>Passive Income</h3>
