--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                     <h3 data-aos="fade-up">Welcome to Escape Room Finance Tokens </h3>
 
                     <h1 data-aos="fade-up">
-                        𝐄𝐒𝐂𝐀𝐏𝐄 𝐟𝐫𝐨𝐦 𝐩𝐚𝐧𝐝𝐞𝐦𝐢𝐜 𝐭𝐫𝐨𝐮𝐛𝐥𝐞 𝐰𝐢𝐭𝐡<br>
-                        #𝐄𝐒𝐂𝐀𝐏𝐄𝐑𝐎𝐎𝐌 𝐩𝐚𝐬𝐬𝐢𝐯𝐞 𝐢𝐧𝐜𝐨𝐦𝐞.<br>
+                        ESCAPE from pandemic trouble, with<br>
+                        #ESCAPEROOM passive income.<br>
 
                     </h1>
 
                     <div class="buttons" data-aos="fade-up">
-                        <a href="#download" class="smoothscroll button stroke">
-                            <span class="icon-circle-down" aria-hidden="true"></span>
+                        <a href="https://t.me/" class="smoothscroll button stroke">
+                            <span class="fa fa-telegram" aria-hidden="true"></span>
                             Join Telegram
                         </a>
-                        <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
-                            <span class="icon-play" aria-hidden="true"></span>
-                            Follow Twitter
+                        <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647" data-lity class="button stroke">
+                            <span class="fa fa-sync" aria-hidden="true"></span>
+                            BUY ESCAPEROOM
                         </a>
                     </div>
 
@@ -245,34 +245,34 @@
 
         <div class="row about-how">
 
-            <h1 class="intro-header" data-aos="fade-up">How The App Works?</h1>
+            <h1 class="intro-header" data-aos="fade-up">ESCAPEROOM Token Information</h1>
 
             <div class="about-how-content" data-aos="fade-up">
                 <div class="about-how-steps block-1-2 block-tab-full group">
 
                     <div class="bgrid step" data-item="1">
-                        <h3>Sign-Up</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                        <h3>TOKEN NAME</h3>
+                        <p>ESCAPEROOM Token (ESCAPEROOM)
                         </p>
                     </div>
 
                     <div class="bgrid step" data-item="2">
-                        <h3>Upload</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                        <h3>TOTAL SUPPLY</h3>
+                        <p>100,000,000,000,000,000
                         </p>
                     </div>
 
                     <div class="bgrid step" data-item="3">
-                        <h3>Create</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                        <h3>SMART CONTRACT</h3>
+                        <p>0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647
                         </p>
                     </div>
 
-                    <div class="bgrid step" data-item="4">
-                        <h3>Publish</h3>
+                    <!--<div class="bgrid step" data-item="4">
+                        <h3>HOLDERS</h3>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
                         </p>
-                    </div>
+                    </div>-->
 
                 </div>
            </div> <!-- end about-how-content -->
@@ -431,8 +431,8 @@
                 </p>
 
                 <ul class="download-badges">
-                    <li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
-                    <li><a href="#" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                    <!--<li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">Pancakeswap</a></li>-->
+                    <li><a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647" title="" data-aos="fade-up"><img src="images/pancakeswap.png"></a></li>
                 </ul>
 
             </div>
