--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
                         </p>
                     </div>
 
-                    <!--<div class="bgrid step" data-item="4">
-                        <h3>HOLDERS</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                    <div class="bgrid step" data-item="4">
+                        <h3>LIQUIDITY</h3>
+                        <p>Liquidity BURN Forever!.
                         </p>
-                    </div>-->
+                    </div>
 
                 </div>
            </div> <!-- end about-how-content -->
@@ -363,7 +363,7 @@
 
     <!-- Testimonials Section
     ================================================== -->
-    <section id="testimonials">
+    <!--<section id="testimonials">
 
         <div class="row">
             <div class="col-twelve">
@@ -409,13 +409,13 @@
                         </div>
                     </div>
 
-                </div> <!-- end slides -->
+                </div>
 
-            </div> <!-- end testimonial-slider -->
+            </div>
 
-        </div> <!-- end flex-container -->
+        </div>
 
-    </section> <!-- end testimonials -->
+    </section>  end testimonials -->
 
 
     <!-- download
@@ -430,7 +430,7 @@
                     The information provided on this website does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the website's content as such. <strong>ESCAPEROOM team</strong> does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions.
                 </p>
 
-                <ul class="download-badges">
+                <ul class="download-badges"><h1 data-aos="fade-up">LISTED ON</h1>
                     <!--<li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">Pancakeswap</a></li>-->
                     <li><a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647" title="" data-aos="fade-up"><img src="images/pancakeswap.png"></a></li>
                 </ul>
