--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000>
+   <section id="home" data-parallax="scroll" data-image-src="images/blockchain-bg.png" data-natural-width=3000 data-natural-height=2000>
 
         <div class="overlay"></div>
         <div class="home-content">
@@ -86,11 +86,11 @@
                     </h1>
 
                     <div class="buttons" data-aos="fade-up">
-                        <a href="https://t.me/" class="smoothscroll button stroke">
+                        <a href="https://t.me/EscapeRoomFinance" data-lity class="button stroke" target="_blank">
                             <span class="fa fa-telegram" aria-hidden="true"></span>
                             Join Telegram
                         </a>
-                        <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647" data-lity class="button stroke">
+                        <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647" data-lity class="button stroke" target="_blank">
                             <span class="fa fa-sync" aria-hidden="true"></span>
                             BUY ESCAPEROOM
                         </a>
@@ -109,17 +109,12 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="#"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://t.me/EscapeRoomFinance"><i class="fa fa-telegram"></i></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/escaperoomFN"><i class="fa fa-twitter"></i></a>
             </li>
-            <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-            </li>
+
         </ul>
         <!-- end home-social-list -->
 
@@ -270,7 +265,12 @@
 
                     <div class="bgrid step" data-item="4">
                         <h3>LIQUIDITY</h3>
-                        <p>Liquidity BURN Forever!.
+                        <p>Liquidity BURN Forever! <a href="https://bscscan.com/tx/0xaed5d04ff69afd7b8a2822a4e818999f5a6086f01d72c0ce9a27b6e19325cd21" target="_blank">BURN PROOF</a>.
+                        </p>
+                    </div>
+                    <div class="bgrid step" data-item="5">
+                        <h3>COMMUNITY OWNED</h3>
+                        <p>ESCAPEROOM token ownership renounced and become community token <a href="https://bscscan.com/tx/0x163573ca54fe9668a7f68beecc6715ac28e999b4623fd63478798972e19b89b3" target="_blank">RENOUNCED PROOF</a>.
                         </p>
                     </div>
 
@@ -291,131 +291,6 @@
         </div>-->  <!-- end about-bottom-image -->
 
     </section> <!-- end about -->
-
-
-    <!-- pricing
-    ==================================================
-    <section id="pricing">
-        <div class="row pricing-content">
-
-            <div class="col-four pricing-intro">
-                <h1 class="intro-header" data-aos="fade-up">Our Pricing Options</h1>
-
-                <p data-aos="fade-up">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
-                </p>
-            </div>
-
-            <div class="col-eight pricing-table">
-                <div class="row">
-
-                    <div class="col-six plan-wrap">
-                        <div class="plan-block" data-aos="fade-up">
-
-                            <div class="plan-top-part">
-                                <h3 class="plan-block-title">Lite Plan</h3>
-                                <p class="plan-block-price"><sup>$</sup>25</p>
-                                <p class="plan-block-per">Per Month</p>
-                            </div>
-
-                            <div class="plan-bottom-part">
-                                <ul class="plan-block-features">
-                                    <li><span>3GB</span> Storage</li>
-                                    <li><span>10GB</span> Bandwidth</li>
-                                    <li><span>5</span> Databases</li>
-                                    <li><span>30</span> Email Accounts</li>
-                                </ul>
-
-                                <a class="button button-primary large" href="">Get Started</a>
-                            </div>
-
-                        </div>
-                    </div>  end plan-wrap
-
-                    <div class="col-six plan-wrap">
-                        <div class="plan-block primary" data-aos="fade-up">
-
-                            <div class="plan-top-part">
-                                <h3 class="plan-block-title">Pro Plan</h3>
-                                <p class="plan-block-price"><sup>$</sup>50</p>
-                                <p class="plan-block-per">Per Month</p>
-                            </div>
-
-                            <div class="plan-bottom-part">
-                                <ul class="plan-block-features">
-                                    <li><span>5GB</span> Storage</li>
-                                    <li><span>20GB</span> Bandwidth</li>
-                                    <li><span>15</span> Databases</li>
-                                    <li><span>70</span> Email Accounts</li>
-                                </ul>
-
-                                <a class="button button-primary large" href="">Get Started</a>
-                            </div>
-
-                        </div>
-                    </div> end plan-wrap
-
-                </div>
-            </div>  end pricing-table
-
-        </div> end pricing-content
-    </section> end pricing -->
-
-
-    <!-- Testimonials Section
-    ================================================== -->
-    <!--<section id="testimonials">
-
-        <div class="row">
-            <div class="col-twelve">
-                <h1 class="intro-header" data-aos="fade-up">What They Say About Our App.</h1>
-            </div>
-        </div>
-
-        <div class="row owl-wrap">
-
-            <div id="testimonial-slider"  data-aos="fade-up">
-
-                <div class="slides owl-carousel">
-
-                    <div>
-                        <p>
-                        Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                        to do what you believe is great work. And the only way to do great work is to love what you do.
-                        If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-                        </p>
-
-                        <div class="testimonial-author">
-                                <img src="images/avatars/user-02.jpg" alt="Author image">
-                                <div class="author-info">
-                                    Steve Jobs
-                                    <span class="position">CEO, Apple.</span>
-                                </div>
-                        </div>
-                    </div>
-
-                    <div>
-                        <p>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                        nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                        </p>
-
-                        <div class="testimonial-author">
-                                <img src="images/avatars/user-03.jpg" alt="Author image">
-                                <div class="author-info">
-                                    John Doe
-                                    <span>CEO, ABC Corp.</span>
-                                </div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
-
-    </section>  end testimonials -->
 
 
     <!-- download
@@ -453,26 +328,8 @@
                     <div class="footer-logo"></div>
 
                     <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
+                    Lets grow together, and build this community bigger.
                     </p>
-
-                    <ul class="footer-social-list">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook-square"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-behance"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </li>
-                    </ul>
 
 
                 </div> <!-- end footer-info -->
@@ -482,53 +339,34 @@
                     <h4>Contact</h4>
 
                     <p>
-                    1600 Amphitheatre Parkway<br>
-                    Mountain View, CA <br>
-                    94043 US<br>
+                    Internet world wide! Just contact us on <a href="https://t.me/EscapeRoomFinance" target="_blank">Telegram</a>
+                    Or <a href="https://twitter.com/escaperoomFN" target="_blank">Twitter</a>
                     </p>
 
-                    <p>
-                    someone@dazzlesite.com <br>
-                    Phone: (+63) 555 1212 <br>
-                    Fax: (+63) 555 0100
-                    </p>
+
 
                 </div> <!-- end footer-contact -->
 
                 <div class="col-two md-1-3 tab-1-2 mob-full footer-site-links">
 
-                    <h4>Site Links</h4>
+                    <h4>Important link</h4>
 
                     <ul class="list-links">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="https://bscscan.com/address/0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647">Smart Contract</a></li>
+                        <li><a href="https://bscscan.com/tx/0xaed5d04ff69afd7b8a2822a4e818999f5a6086f01d72c0ce9a27b6e19325cd21">LP Burn</a></li>
+                        <li><a href="https://bscscan.com/tx/0x163573ca54fe9668a7f68beecc6715ac28e999b4623fd63478798972e19b89b3">Token Renounced</a></li>
+                        <li><a href="https://bscscan.com/token/0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647#balances">Token holder</a></li>
                     </ul>
 
                 </div> <!-- end footer-site-links -->
 
                 <div class="col-four md-1-2 tab-full footer-subscribe">
 
-                    <h4>Our Newsletter</h4>
+                  <h4>BUY NOW</h4>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
-                    <div class="subscribe-form">
-
-                        <form id="mc-form" class="group" novalidate="true">
-
-                            <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
-
-                            <input type="submit" name="subscribe" value="Send">
-
-                            <label for="mc-email" class="subscribe-message"></label>
-
-                        </form>
-
-                    </div>
+                  <p>
+                  Buy now, and thank us later! if you rich, we rich together!
+                  </p>
 
                 </div> <!-- end footer-subscribe -->
 
