--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="fas fa-users"></i></span>
+                    <span class="icon"><i class="fa fa-truck-loading"></i></span>
 
                     <div class="service-content">
                         <h3>Community Tokens</h3>
@@ -222,7 +222,7 @@
 
                 <div class="bgrid feature" data-aos="fade-up">
 
-                    <span class="icon"><i class="fas fa-rocket"></i></span>
+                    <span class="icon"><i class="fa fa-truck-loading"></i></span>
 
                     <div class="service-content">
                         <h3>Grow Together</h3>
