--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
                     <div class="bgrid step" data-item="3">
                         <h3>SMART CONTRACT</h3>
-                        <p>0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647
+                        <p><a href="https://bscscan.com/token/0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647" target="_blank">x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647</a>
                         </p>
                     </div>
 
@@ -352,7 +352,7 @@
                     <h4>Important link</h4>
 
                     <ul class="list-links">
-                        <li><a href="https://bscscan.com/address/0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647">Smart Contract</a></li>
+                        <li><a href="https://bscscan.com/token/0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647">Smart Contract</a></li>
                         <li><a href="https://bscscan.com/tx/0xaed5d04ff69afd7b8a2822a4e818999f5a6086f01d72c0ce9a27b6e19325cd21">LP Burn</a></li>
                         <li><a href="https://bscscan.com/tx/0x163573ca54fe9668a7f68beecc6715ac28e999b4623fd63478798972e19b89b3">Token Renounced</a></li>
                         <li><a href="https://bscscan.com/token/0x51Ec8691BbdD9EB33017eab6Cce571f78dcB5647#balances">Token holder</a></li>
